// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`schemaModuleProps2File non-root 1`] = `
"version: 1
imports: []
schemas:
  - id: bond
    children:
      - ch1
    title: bond
    parent: root
  - id: ch1
    children: []
    title: ch1
"
`;

exports[`schemaModuleProps2File root 1`] = `
"version: 1
imports: []
schemas:
  - id: root
    children: []
    title: root
    parent: root
"
`;
